--- a/Insuranceclaim/Views/Admin/AdminPolicies/Index.cshtml
+++ b/Insuranceclaim/Views/Admin/AdminPolicies/Index.cshtml
@@ -20,7 +20,7 @@
 
     /* Main container and title */
 
-    .main-content {
+    .policy-content {
         padding: 2rem;
     }
 
@@ -201,7 +201,7 @@
     }
 </style>
 
-<div class="main-content">
+<div class="policy-content">
     <div class="d-flex justify-content-between align-items-center mt-4">
         <h2>Policy Management</h2>
         <button type="button" class="btn btn-create-policy" data-bs-toggle="modal" data-bs-target="#addPolicyModal">
