--- a/Insuranceclaim/Views/Home/Contact.cshtml
+++ b/Insuranceclaim/Views/Home/Contact.cshtml
@@ -16,10 +16,16 @@
         <div class="extra-info mt-4">
             <h5>Insurance Claim Management</h5>
             <p>
+                Have a question about our insurance claim management services? Need help with a specific claim? <br />
+                ping us a message  or give us a call. We look forward to partnering with you to ensure a smooth billing process.<br /><hr />
                 We offer a hassle-free Insurance Claim Management system to help you focus on your mental well-being while we
                 handle your paperwork. Our expert support team ensures smooth processing of your therapy or wellness-related
                 claims with transparency and care.
             </p>
+        </div>
+        <div>
+        </div>
+        <div>
         </div>
     </div>
 </main>
