--- a/Insuranceclaim/Views/Account/Login.cshtml
+++ b/Insuranceclaim/Views/Account/Login.cshtml
@@ -4,29 +4,34 @@
 }
 
 <div class="login-container">
-    <div class="login-box">
-        <div class="logo">
-            <span>The Healthy Mind</span>
+    <div class="login-wrapper">
+        <div class="login-box">
+            <div class="logo">
+                <span>Hello There, Welcome Back!!</span>
+            </div>
+            <h4>Login to Get Started</h4>
+            <form method="post" asp-controller="Account" asp-action="Login">
+                @if (ViewBag.ErrorMessage != null)
+                {
+                    <div class="alert alert-danger">@ViewBag.ErrorMessage</div>
+                }
+
+                <div class="form-group">
+                    @* <label for="username">Username</label> *@
+                    <input type="text" id="username" name="username" class="form-control" placeholder="Username" required />
+                </div>
+
+                <div class="form-group">
+                    @* <label for="password">Password</label> *@
+                    <input type="password" id="password" name="password" class="form-control" placeholder="Password" required />
+                </div>
+
+                <button type="submit" class="btn btn-login">Login</button>
+            </form>
         </div>
-        <h4>Login</h4>
-        <form method="post" asp-controller="Account" asp-action="Login">
-            @if (ViewBag.ErrorMessage != null)
-            {
-                <div class="alert alert-danger">@ViewBag.ErrorMessage</div>
-            }
-            @* <label>User Type</label>
-            <select name="usertype" id="usertype" class="form-control" required>
-                <option value="">-- Select User Type --</option>
-                <option value="agent">Agent</option>
-                <option value="Claim Adjuster">Claim Adjuster</option>
-                <option value="admin">Admin</option>
-                <option value="POLICY HOLDER">Policy Holder</option>
-            </select> *@
-            <label>Username</label>
-            <input type="text" name="username" class="form-control" placeholder="Enter username" required />
-            <label>Password</label>
-            <input type="password" name="password" class="form-control" placeholder="Enter password" required />
-            <button type="submit" class="btn btn-login mt-3">Login</button>
-        </form>
+
+        @* <div class="login-image-container">
+<img src="/Images/Healthcare-Law_Center_Cover-1024x538.png" alt="Health Insurance Illustration" class="login-image" />
+</div> *@
     </div>
 </div>
