--- a/Insuranceclaim/Views/Admin/AdminSupportTickets/Index.cshtml
+++ b/Insuranceclaim/Views/Admin/AdminSupportTickets/Index.cshtml
@@ -138,7 +138,7 @@
     }
 </style>
 
-<div class="main-content">
+<div class="support-content">
     <div class="d-flex justify-content-between align-items-center mt-4 mb-4">
         <h2>Support Tickets</h2>
     </div>
