--- a/Insuranceclaim/Views/Shared/_Layout.cshtml
+++ b/Insuranceclaim/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
         </div>
     </nav>
 
-    <div class="container-fluid" id="main-content">
+    <div class="" id="main-content">
         @RenderBody()
     </div>
 
